objects/noduplicates__Schedule__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Business_Emails__c</fullName>
        <label>Business Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cron_Job_Id__c</fullName>
        <label>Cron Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Day2__c</fullName>
        <label>Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Day_of_month__c</fullName>
        <label>Day of month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>noduplicates__Email_When_Job_Completes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email When Duplicates Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>noduplicates__Frequency__c</fullName>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>noduplicates__Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Is_Lightning_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lightning UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Matching_Rule__c</fullName>
        <label>Matching Rule</label>
        <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Org_Wide_Address__c</fullName>
        <label>Org Wide Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Perform_Auto_merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Auto-Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Preferred_Start_Time__c</fullName>
        <label>Preferred Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>noduplicates__Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Specific_Day__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Specific Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>noduplicates__Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Weekday2__c</fullName>
        <label>Weekday</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>